--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -46,13 +46,14 @@ $block-grid-gutter: $global-gutter;
 // 4. Typography
 // -------------
 $global-font-color: $black;
-$body-font-family: Helvetica,
+$body-font-family: 'Montserrat',
+Helvetica,
 Arial,
 sans-serif;
 $global-font-weight: normal;
 $header-color: inherit;
 $global-line-height: 1.3;
-$global-font-size: 16px;
+$global-font-size: 14px;
 $body-line-height: $global-line-height;
 $header-font-family: $body-font-family;
 $header-font-weight: $global-font-weight;
